shelf: Show a ripple when tapping app list button in tablet mode.

It was not shown before, probably because of Ink drop behaviour set to
ON_NO_GESTURE_HANDLER. Manually set the ink drop states when home
launcher is shown.

Test: manual
Bug: 898656
Change-Id: Ic8fa65ae01d839d5adfeebc976bc9e744a080f2e
Reviewed-on: https://chromium-review.googlesource.com/c/1298425
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Cr-Commit-Position: refs/heads/master@{#602529}