ash/shelf/app_list_button.cc
@@ -55,6 +55,12 @@ bool IsAssistantEnabled() {
          chromeos::switches::IsAssistantEnabled();
 }
 
+bool IsHomeLauncherShown() {
+  return Shell::Get()
+      ->app_list_controller()
+      ->IsHomeLauncherEnabledInTabletMode();
+}
+
 }  // namespace
 
 AppListButton::AppListButton(InkDropButtonListener* listener,
@@ -100,7 +106,7 @@ AppListButton::~AppListButton() {
 void AppListButton::OnAppListShown() {
   // Do not show a highlight in tablet mode since the "homecher" view is always
   // open in the background.
-  if (shelf_view_->ShouldShowAppListButtonHighlight())
+  if (!IsHomeLauncherShown())
     AnimateInkDrop(views::InkDropState::ACTIVATED, nullptr);
   is_showing_app_list_ = true;
   shelf_->UpdateAutoHideState();
@@ -125,6 +131,8 @@ void AppListButton::OnGestureEvent(ui::GestureEvent* event) {
         assistant_overlay_->EndAnimation();
         assistant_animation_delay_timer_->Stop();
       }
+      if (IsHomeLauncherShown())
+        AnimateInkDrop(views::InkDropState::ACTION_TRIGGERED, event);
       ImageButton::OnGestureEvent(event);
       return;
     case ui::ET_GESTURE_TAP_DOWN:
@@ -136,8 +144,10 @@ void AppListButton::OnGestureEvent(ui::GestureEvent* event) {
             base::Bind(&AppListButton::StartVoiceInteractionAnimation,
                        base::Unretained(this)));
       }
-      if (!Shell::Get()->app_list_controller()->IsVisible())
+      if (!Shell::Get()->app_list_controller()->IsVisible() ||
+          IsHomeLauncherShown()) {
         AnimateInkDrop(views::InkDropState::ACTION_PENDING, event);
+      }
       ImageButton::OnGestureEvent(event);
       return;
     case ui::ET_GESTURE_LONG_PRESS:
